typescript/checker/tests/conformance/es6/destructuring/emptyObjectBindingPatternParameter04.ts.stderr
error: TS2353 {
    span: Span {
        lo: BytePos(
            42,
        ),
        hi: BytePos(
            46,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/destructuring/emptyObjectBindingPatternParameter04.ts:3:18
  |
3 | function f({} = {a: 1, b: "2", c: true}) {
  |                  ^^^^

error: TS2353 {
    span: Span {
        lo: BytePos(
            48,
        ),
        hi: BytePos(
            54,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/destructuring/emptyObjectBindingPatternParameter04.ts:3:24
  |
3 | function f({} = {a: 1, b: "2", c: true}) {
  |                        ^^^^^^

error: TS2353 {
    span: Span {
        lo: BytePos(
            56,
        ),
        hi: BytePos(
            63,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/destructuring/emptyObjectBindingPatternParameter04.ts:3:32
  |
3 | function f({} = {a: 1, b: "2", c: true}) {
  |                                ^^^^^^^

